- Updated SMTP password and set the properties file to use the environment variable instead of the hardcoded password - Fixed error where the incorrect default build profile was referenced in profiles.gradle - Fixed issue where the calendar was showing up behind the modal dialog when scheduling an appointment

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -112,7 +112,7 @@ div.ui-datepicker tbody td:last-child {
   border-right: 0px;
 }
 div.ui-datepicker {
-	z-index: 2 !important; /* because jQuery adds z-index: 1 to the element's style. Using !important is the only way I can think of to override this style */
+	z-index: 2000 !important; /* because jQuery adds z-index: 1 to the element's style. Using !important is the only way I can think of to override this style */
 }
 /* end override bootstrap styles */
 h2.pageTitle {
